--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="authoring-tool" content="Adobe_Animate_CC">
-<title>Web_game (1)</title>
+<title>The Destruction and Renewal</title>
 
 <!-- ✅ 加载页样式 -->
 <style>
